2003-05-08  Derek Atkins  <derek@ihtfp.com>

	* configure.in: add AC_PREREQ(2.53) to require 2.53 :)
	* macros/autogen.sh: add more searches for a good version of
	  the autotools.

	* configure.in: fix some AC_DEFINE macros
	* macros/autogen.sh: a bit more work on the version searches.

	* acconfig.h: remove duplicate entries (for use with more recent autoheader)
	* configure.in: supply AC_PROG_CXX to fix the automake-1.7 problem

2003-05-07  Derek Atkins  <derek@ihtfp.com>

	* macros/autogen.sh: require autoconf >= 2.53 and automake >= 1.5
	  Also look for appropriately-named versions on systems like RH7.3

2003-05-05  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/dialog-hbcitrans.c, gnc-hbci-utils.h,
	gnc-hbci-utils.c, hbci-interaction.h, hbci-interaction.c: Add
	*much* better error checking -- the user now gets almost always
	correct feedback if an online transfer cannot be executed.

2003-05-05  David Hampton  <hampton@employees.org>

	* macros/openhbci.m4: Fix problem with latest versions of autoconf.

2003-05-03  Christian Stimming  <stimming@tuhh.de>

	* configure.in: Fix hbci and ofx test for handling --disable
	correctly.

2003-05-01  Derek Atkins  <derek@ihtfp.com>

	* src/import-export/qif-import/qif-parse.scm: Don't assume that a
	  date of the form XXXXXXXX is always YYYYMMDD.  There is at least
	  one example where it is MMDDYYYY.  So, test it both ways:
	  xxxxYYYY and YYYYxxxx.  Make sure a 4-digit year "makes sense"
	  (e.g., the year is after 1930). Fixes bug #111889.

2003-04-29  Derek Atkins  <derek@ihtfp.com>

	* src/engine/test/Makefile.am: disable the test-scm-query-import
	  test, since it breaks on guile-1.6 (which does mean that
	  importing into a guile-1.6-based system will fail, but so much
	  else fails when upgrading from 1.6 to 1.8 that it really doesn't
	  matter.  Users will have to reset their reports anyways.

2003-04-28  David Hampton  <hampton@employees.org>